# 2024ESWContest_mobility_6053

./: .gitignore  README.md  augmentation.py  check_class.py  check_image.py  preprocessing.ipynb  preprocessing.py  yolov8_train.py
astrayolo_ws/src/orpython/: package.xml  setup.cfg  setup.py
astrayolo_ws/src/orpython/orpython/: yolov8_node.py  yolov8_tracking_node.py
astrayolo_ws/src/orros/: CMakeLists.txt  package.xml
astrayolo_ws/src/orros/msg/: YoloBox.msg  YoloBoxes.msg
convert_weight/: 00_calibration_dataset.py  0_onnx_version.py  1_opset_version.py  2_model_Parsing.py  3_model_optimization.py  4_model_compilation.py  calibration_dataset.py  model_Parsing.py  model_compilation.py  model_optimization.py  onnx_version.py
convert_weight/lane_segmentation/: predict.py
convert_weight/road_mark/: opset_version.py
lane_training/: check_polygon.py  convert_yolo.py  yolo-seg_train.py  yolov8-seg_train.py
light/hailo8l_detection/resources/: labels.json
light/ros2_docker/: tcp_server.py
road_mark_training/: README.md  augmentation.py  check_class.py  check_image.py  preprocessing.py  yolov8_train.py
road_mark_training/runs/detect/train/: args.yaml
road_mark_training/runs/detect/train10/: args.yaml  results.csv
road_mark_training/runs/detect/train11/: args.yaml
road_mark_training/runs/detect/train12/: args.yaml  results.csv
road_mark_training/runs/detect/train13/: args.yaml  results.csv
road_mark_training/runs/detect/train14/: args.yaml
road_mark_training/runs/detect/train15/: args.yaml  results.csv
road_mark_training/runs/detect/train16/: args.yaml
road_mark_training/runs/detect/train17/: args.yaml  results.csv
road_mark_training/runs/detect/train2/: args.yaml
road_mark_training/runs/detect/train4/: args.yaml  results.csv
road_mark_training/runs/detect/train6/: args.yaml
road_mark_training/runs/detect/train7/: results.csv
road_mark_training/runs/detect/train8/: args.yaml
road_mark_training/runs/detect/train9/: args.yaml  results.csv
roadmark/hailo8l_detection/: detection.py  run_detection.sh  setup_env.sh
roadmark/hailo8l_detection/resources/: lane_labels.json  mark_labels.json
roadmark/ros2_docker/: Dockerfile  tcp_server.py
roadmark/ros2_docker/src/my_ros2_package/: CMakeLists.txt  setup.py
roadmark/ros2_docker/src/my_ros2_package/scripts/old/: camera_image_publisher.py
runs/detect/train3/: args.yaml
runs/detect/train5/: args.yaml  results.csv
runs/detect/train6/: results.csv
runs/detect/train7/: args.yaml
runs/detect/train8/: results.csv
traffic_light/hailo8l_detection/: detection.py  hailo_rpi_common.py  run_detection.sh
traffic_light/hailo8l_detection/resources/: road_labels.txt
traffic_light/ros2_docker/: Dockerfile
traffic_light/ros2_docker/src/my_ros2_package/: CMakeLists.txt  package.xml
traffic_light/ros2_docker/src/my_ros2_package/scripts/: camera_image_publisher2.py
traffic_light_training/: augmentation.py  check_class.py  check_image.py  dataset_split.py  preprocessing.py  yolov8_train.py
traffic_light_training/runs/detect/train/: args.yaml
traffic_light_training/runs/detect/train2/: args.yaml
traffic_light_training/runs/detect/train3/: args.yaml  results.csv
traffic_light_training/runs/detect/train4/: args.yaml
traffic_light_training/runs/detect/train5/: args.yaml  results.csv
travi_ui/: CMakeLists.txt  package.xml
travi_ui/include/travi_ui/: TRAVI_ui.hpp
travi_ui/src/: TRAVI_ui.cpp  TRAVI_ui_1021.cpp  TRAVI_ui_1022.cpp  data_decision.cpp  keyboard_publisher.cpp  past_Travi_ui.cpp  past_keyboard_pub.cpp
