<?xml version="1.0"?>
<package format="3">
  <name>orpython</name>
  <version>0.0.1</version>
  <description>YOLOv8 Python nodes package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Python 패키지 의존성 -->
  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>orros</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>orros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

