<package format="3">
  <name>my_ros2_package</name>
  <version>0.0.1</version>
  <description>A custom ROS2 package for publishing camera images.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
  </export>
</package>
